@@ -1,3 +1,9 @@
+2007-09-17  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/x86-64-rip.s: Revert the last change.
+	* gas/i386/x86-64-rip-intel.d: Likewise.
+	* gas/i386/x86-64-rip.d: Likewise.
+
 2007-09-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gas/5034
