@@ -1,3 +1,7 @@
+2007-09-17  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (intel_e04): Revert the last change.
+
 2007-09-17  Nick Clifton  <nickc@redhat.com>
 
 	* po/es.po: Updated Spanish translation.
